--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Clothing Store</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
